--- a/charts/rocketadmin/templates/secret.yaml
+++ b/charts/rocketadmin/templates/secret.yaml
@@ -1,6 +1,7 @@
 {{- define "chrt-6456.password" -}}
 {{- randAlphaNum 24 | nospace -}}
 {{- end -}}
+apiVersion: v1
 kind: Secret
 metadata:
   name: rocketadmin
