--- a/charts/rocketadmin/templates/secret.yaml
+++ b/charts/rocketadmin/templates/secret.yaml
@@ -4,8 +4,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: rocketadmin
-  namespace: default
+  name: {{ include "rocketadmin.fullname" . }}
+  labels:
+    {{- include "rocketadmin.labels" . | nindent 4 }}
 type: Opaque
 data:
   JWT_SECRET: {{ include "chrt-6456.password" .}}
