--- a/charts/rocketadmin/Chart.yaml
+++ b/charts/rocketadmin/Chart.yaml
@@ -24,5 +24,5 @@ version: 0.1.7
 appVersion: "0.14.8"
 dependencies:
 - name: postgres
-  repository: oci://registry-1.docker.io/bitnamicharts/postgresql
+  repository: oci://registry-1.docker.io/bitnamicharts
   version: 15.5.5
