--- a/charts/rocketadmin/Chart.yaml
+++ b/charts/rocketadmin/Chart.yaml
@@ -25,4 +25,4 @@ appVersion: "0.14.8"
 dependencies:
 - name: postgres
   repository: oci://registry-1.docker.io/bitnamicharts
-  version: 15.5.5
+  version: "^15.5.5"
