--- a/charts/rocketadmin/Chart.yaml
+++ b/charts/rocketadmin/Chart.yaml
@@ -16,6 +16,7 @@ type: application
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
 version: 0.1.7
+home: https://rocketadmin.com
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -23,6 +24,6 @@ version: 0.1.7
 # It is recommended to use it with quotes.
 appVersion: "0.14.8"
 dependencies:
-- name: postgres
+- name: postgresql
   repository: oci://registry-1.docker.io/bitnamicharts
-  version: "^15.5.5"
+  version: "15.5.5"
