--- a/charts/rocketadmin/templates/secret.yaml
+++ b/charts/rocketadmin/templates/secret.yaml
@@ -1,5 +1,5 @@
 {{- define "chrt-6456.password" -}}
-{{- randAlphaNum 24 | nospace -}}
+{{- randAlphaNum 128 | nospace -}}
 {{- end -}}
 apiVersion: v1
 kind: Secret
@@ -11,3 +11,4 @@ type: Opaque
 data:
   JWT_SECRET: {{ include "chrt-6456.password" .}}
   PRIVATE_KEY: {{ include "chrt-6456.password" .}}
+  DATABASE_URL: postgresql://rocketadmin:{{ include "rocketadmin.dbPassword" . | b64enc }}@{{ include "redash.postgresql.fullname" . }}/rocketadmin
