chore: Update DATABASE_URL in secret.yaml

--- a/charts/rocketadmin/templates/secret.yaml
+++ b/charts/rocketadmin/templates/secret.yaml
@@ -11,4 +11,4 @@ type: Opaque
 data:
   JWT_SECRET: {{ include "chrt-6456.password" .}}
   PRIVATE_KEY: {{ include "chrt-6456.password" .}}
-  DATABASE_URL: postgresql://rocketadmin:{{ include "rocketadmin.dbPassword" . | b64enc }}@{{ include "redash.postgresql.fullname" . }}/rocketadmin
+  DATABASE_URL: postgresql://rocketadmin:{{ include "rocketadmin.dbPassword" . | b64enc }}@{{ include "rocketadmin.postgresql.fullname" . }}/rocketadmin
