--- a/charts/rocketadmin/Chart.yaml
+++ b/charts/rocketadmin/Chart.yaml
@@ -27,3 +27,7 @@ dependencies:
 - name: postgresql
   repository: oci://registry-1.docker.io/bitnamicharts
   version: "15.5.5"
+maintainers:
+  - name: Andrii Kostenko
+    email: andrii@rocketadmin.com
+    
