chore: Update secret.yaml to use stringData for data fields

--- a/charts/rocketadmin/templates/secret.yaml
+++ b/charts/rocketadmin/templates/secret.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     {{- include "rocketadmin.labels" . | nindent 4 }}
 type: Opaque
-data:
+stringData:
   JWT_SECRET: {{ include "chrt-6456.password" .}}
   PRIVATE_KEY: {{ include "chrt-6456.password" .}}
   DATABASE_URL: postgresql://rocketadmin:{{ include "rocketadmin.dbPassword" . }}@{{ include "rocketadmin.postgresql.fullname" . }}/rocketadmin
