--- a/charts/rocketadmin/Chart.yaml
+++ b/charts/rocketadmin/Chart.yaml
@@ -1,15 +1,6 @@
 apiVersion: v2
 name: rocketadmin
-description: Rocketadmin helm chart
-
-# A chart can be either an 'application' or a 'library' chart.
-#
-# Application charts are a collection of templates that can be packaged into versioned archives
-# to be deployed.
-#
-# Library charts provide useful utilities or functions for the chart developer. They're included as
-# a dependency of application charts to inject those utilities and functions into the rendering
-# pipeline. Library charts do not define any templates and therefore cannot be deployed.
+description: Rocketadmin is a web-based application for creating admin panels for your projects.
 type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
@@ -17,11 +8,8 @@ type: application
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
 version: 0.1.10
 home: https://rocketadmin.com
-
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application. Versions are not expected to
-# follow Semantic Versioning. They should reflect the version the application is using.
-# It is recommended to use it with quotes.
+sources:
+  - https://github.com/rocket-admin/rocketadmin
 appVersion: "0.14.8"
 dependencies:
 - name: postgresql
