change secret name

--- a/charts/rocketadmin/values.yaml
+++ b/charts/rocketadmin/values.yaml
@@ -85,4 +85,4 @@ postgresql:
   enabled: true
   auth:
     username: rocketadmin
-    existingSecret: rocketadmin-postgresql
+    existingSecret: rocketadmin-postgresql-secret
