constant secret name until I understand what's going on

--- a/charts/rocketadmin/templates/postgres-secret.yaml
+++ b/charts/rocketadmin/templates/postgres-secret.yaml
@@ -4,7 +4,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "rocketadmin.fullname" . }}-postgresql
+  name: rocketadmin-postgresql-secret
   labels:
     {{- include "rocketadmin.labels" . | nindent 4 }}
 type: Opaque
