change key name

--- a/charts/rocketadmin/templates/postgres-secret.yaml
+++ b/charts/rocketadmin/templates/postgres-secret.yaml
@@ -9,4 +9,4 @@ metadata:
     {{- include "rocketadmin.labels" . | nindent 4 }}
 type: Opaque
 stringData:
-  postgres-password: {{ include "rocketadmin.dbPassword" . }}
+  postgresql-password: {{ include "rocketadmin.dbPassword" . }}
