set postgres password

--- a/charts/rocketadmin/templates/postgres-secret.yaml
+++ b/charts/rocketadmin/templates/postgres-secret.yaml
@@ -10,3 +10,4 @@ metadata:
 type: Opaque
 stringData:
   password: {{ include "rocketadmin.dbPassword" . }}
+  postgres-password: {{ include "rocketadmin.dbPassword" . }}
