--- a/charts/rocketadmin/templates/postgres-secret.yaml
+++ b/charts/rocketadmin/templates/postgres-secret.yaml
@@ -9,5 +9,5 @@ metadata:
     {{- include "rocketadmin.labels" . | nindent 4 }}
 type: Opaque
 stringData:
-  password: {{ include "rocketadmin.dbPassword" . }}
+  password: {{.Values.auth.password}}
   postgres-password: {{ include "rocketadmin.dbPassword" . }}
