--- a/charts/rocketadmin/templates/secret.yaml
+++ b/charts/rocketadmin/templates/secret.yaml
@@ -11,4 +11,4 @@ type: Opaque
 stringData:
   JWT_SECRET: {{ include "chrt-6456.password" .}}
   PRIVATE_KEY: {{ include "chrt-6456.password" .}}
-  DATABASE_URL: postgresql://rocketadmin:{{ index (lookup "v1" "Secret" .Release.Namespace "rocketadmin-postgresql-secret").data "password" }}}@{{ include "rocketadmin.postgresql.fullname" . }}/rocketadmin
+  DATABASE_URL: postgresql://rocketadmin:{{.Values.auth.password}}@{{ include "rocketadmin.postgresql.fullname" . }}/rocketadmin
