--- a/charts/rocketadmin/values.yaml
+++ b/charts/rocketadmin/values.yaml
@@ -13,8 +13,15 @@ image:
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+
 auth:
   password: changeme
+email:
+  enabled: false
+  username: ""
+  password: ""
+  host: ""
+  port: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -49,7 +56,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: rocketadmin.local
       paths:
         - path: /
           pathType: ImplementationSpecific
