try to fix secret syntax, test with enabled email

--- a/charts/rocketadmin/templates/secret.yaml
+++ b/charts/rocketadmin/templates/secret.yaml
@@ -12,6 +12,6 @@ stringData:
   JWT_SECRET: {{ include "chrt-6456.password" .}}
   PRIVATE_KEY: {{ include "chrt-6456.password" .}}
   DATABASE_URL: postgresql://rocketadmin:{{.Values.auth.password}}@{{ include "rocketadmin.postgresql.fullname" . }}/rocketadmin
-  {{- if .Values.email.enabled }}
-  EMAIL_CONFIG_STRING: smtp://{{.Values.email.username}}:{{.Values.email.password}}@{{.Values.email.host}}:{{.Values.email.port}}
-  {{- end }}
+{{- if .Values.email.enabled }}
+  EMAIL_CONFIG_STRING: "smtp://{{.Values.email.username}}:{{.Values.email.password}}@{{.Values.email.host}}:{{.Values.email.port}}"
+{{- end }}
