--- a/charts/rocketadmin/Chart.yaml
+++ b/charts/rocketadmin/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: rocketadmin
 description: Rocketadmin is a web-based application for creating admin panels for your projects.
 type: application
-
-version: 0.1.13
+icon: https://avatars.githubusercontent.com/u/84132223
+version: 0.1.14
 home: https://rocketadmin.com
 sources:
   - https://github.com/rocket-admin/rocketadmin
