--- a/charts/rocketadmin/templates/secret.yaml
+++ b/charts/rocketadmin/templates/secret.yaml
@@ -11,7 +11,7 @@ type: Opaque
 stringData:
   JWT_SECRET: {{ include "chrt-6456.password" .}}
   PRIVATE_KEY: {{ include "chrt-6456.password" .}}
-  DATABASE_URL: postgresql://rocketadmin:{{.Values.auth.password}}@{{ include "rocketadmin.postgresql.fullname" . }}/rocketadmin
+  DATABASE_URL: postgresql://rocketadmin:{{urlquery .Values.auth.password}}@{{ include "rocketadmin.postgresql.fullname" . }}/rocketadmin
 {{- if .Values.email.enabled }}
-  EMAIL_CONFIG_STRING: "smtp://{{.Values.email.username}}:{{.Values.email.password}}@{{.Values.email.host}}:{{.Values.email.port}}"
+  EMAIL_CONFIG_STRING: "smtp://{{urlquery .Values.email.username}}:{{urlquery .Values.email.password}}@{{.Values.email.host}}:{{.Values.email.port}}"
 {{- end }}
