--- a/charts/rocketadmin/values.yaml
+++ b/charts/rocketadmin/values.yaml
@@ -22,6 +22,7 @@ email:
   password: ""
   host: ""
   port: ""
+  from: "rocketadmin@email.local"
 
 serviceAccount:
   # Specifies whether a service account should be created
