set app domain address

--- a/charts/rocketadmin/values.yaml
+++ b/charts/rocketadmin/values.yaml
@@ -13,7 +13,7 @@ image:
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
-
+hostname: "{{ if (and .Values.ingress.enabled .Values.ingress.hosts) }}{{ .Values.ingress.hosts | first }}{{ else }}''{{ end }}"
 auth:
   password: changeme
 email:
