--- a/charts/rocketadmin/templates/secret.yaml
+++ b/charts/rocketadmin/templates/secret.yaml
@@ -11,6 +11,7 @@ type: Opaque
 stringData:
   JWT_SECRET: {{ include "chrt-6456.password" .}}
   PRIVATE_KEY: {{ include "chrt-6456.password" .}}
+  APP_DOMAIN_ADDRESS: {{ .Values.hostname }}
   DATABASE_URL: postgresql://rocketadmin:{{urlquery .Values.auth.password}}@{{ include "rocketadmin.postgresql.fullname" . }}/rocketadmin
 {{- if .Values.email.enabled }}
   EMAIL_CONFIG_STRING: "smtp://{{urlquery .Values.email.username}}:{{urlquery .Values.email.password}}@{{.Values.email.host}}:{{.Values.email.port}}"
