chore: Update secret.yaml to include APP_DOMAIN_ADDRESS if provided

--- a/charts/rocketadmin/templates/secret.yaml
+++ b/charts/rocketadmin/templates/secret.yaml
@@ -11,7 +11,9 @@ type: Opaque
 stringData:
   JWT_SECRET: {{ include "chrt-6456.password" .}}
   PRIVATE_KEY: {{ include "chrt-6456.password" .}}
+{{-if .Values.hostname }}
   APP_DOMAIN_ADDRESS: {{ .Values.hostname }}
+{{- end }}
   DATABASE_URL: postgresql://rocketadmin:{{urlquery .Values.auth.password}}@{{ include "rocketadmin.postgresql.fullname" . }}/rocketadmin
 {{- if .Values.email.enabled }}
   EMAIL_CONFIG_STRING: "smtp://{{urlquery .Values.email.username}}:{{urlquery .Values.email.password}}@{{.Values.email.host}}:{{.Values.email.port}}"
