--- a/charts/rocketadmin/templates/secret.yaml
+++ b/charts/rocketadmin/templates/secret.yaml
@@ -10,6 +10,23 @@
     ''
   {{- end -}}
 {{- end -}}
+
+{{- define "gen.secret" -}}
+{{- $secret := lookup "v1" "Secret" .Release.Namespace "rocketadmin" -}}
+{{- if $secret -}}
+{{/*
+   Reusing value of secret if exist
+*/}}
+JWT_SECRET: {{ $secret.data.JWT_SECRET | b64dec | quote }}
+PRIVATE_KEY: {{ $secret.data.PRIVATE_KEY | b64dec | quote }}
+{{- else -}}
+{{/*
+    add new data
+*/}}
+JWT_SECRET: {{ randAlphaNum 64 | quote }}
+PRIVATE_KEY: {{ randAlphaNum 64 | quote }}
+{{- end -}}
+{{- end -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -18,8 +35,7 @@ metadata:
     {{- include "rocketadmin.labels" . | nindent 4 }}
 type: Opaque
 stringData:
-  JWT_SECRET: {{ include "chrt-6456.password" .}}
-  PRIVATE_KEY: {{ include "chrt-6456.password" .}}
+{{- ( include "gen.secret" . ) | indent 2 -}}
   APP_DOMAIN_ADDRESS: {{ include "app-domain-address" . }}
   DATABASE_URL: postgresql://rocketadmin:{{urlquery .Values.auth.password}}@{{ include "rocketadmin.postgresql.fullname" . }}/rocketadmin
 {{- if .Values.email.enabled }}
