--- a/charts/rocketadmin/templates/secret.yaml
+++ b/charts/rocketadmin/templates/secret.yaml
@@ -1,6 +1,3 @@
-{{- define "chrt-6456.password" -}}
-{{- randAlphaNum 128 | nospace -}}
-{{- end -}}
 {{- define "app-domain-address" -}}
   {{- if .Values.hostname }}
     {{- .Values.hostname -}}
@@ -10,7 +7,6 @@
     ''
   {{- end -}}
 {{- end -}}
-
 {{- define "gen.secret" -}}
 {{- $secret := lookup "v1" "Secret" .Release.Namespace "rocketadmin" -}}
 {{- if $secret -}}
@@ -20,9 +16,6 @@
 JWT_SECRET: {{ $secret.data.JWT_SECRET | b64dec | quote }}
 PRIVATE_KEY: {{ $secret.data.PRIVATE_KEY | b64dec | quote }}
 {{- else -}}
-{{/*
-    add new data
-*/}}
 JWT_SECRET: {{ randAlphaNum 64 | quote }}
 PRIVATE_KEY: {{ randAlphaNum 64 | quote }}
 {{- end -}}
@@ -35,7 +28,7 @@ metadata:
     {{- include "rocketadmin.labels" . | nindent 4 }}
 type: Opaque
 stringData:
-{{- ( include "gen.secret" . ) | indent 2 -}}
+{{ ( include "gen.secret" . ) | indent 2}}
   APP_DOMAIN_ADDRESS: {{ include "app-domain-address" . }}
   DATABASE_URL: postgresql://rocketadmin:{{urlquery .Values.auth.password}}@{{ include "rocketadmin.postgresql.fullname" . }}/rocketadmin
 {{- if .Values.email.enabled }}
