openai api key support

--- a/charts/rocketadmin/templates/secret.yaml
+++ b/charts/rocketadmin/templates/secret.yaml
@@ -34,4 +34,5 @@ stringData:
 {{- if .Values.email.enabled }}
   EMAIL_CONFIG_STRING: "smtp://{{urlquery .Values.email.username}}:{{urlquery .Values.email.password}}@{{.Values.email.host}}:{{.Values.email.port}}"
   EMAIL_FROM: {{.Values.email.from}}
+  OPENAI_API_KEY: {{.Values.config.openai_api_key}}
 {{- end }}
