--- a/charts/rocketadmin/templates/deployment.yaml
+++ b/charts/rocketadmin/templates/deployment.yaml
@@ -27,6 +27,12 @@ spec:
       serviceAccountName: {{ include "rocketadmin.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+{{- if .Values.pglite.enabled }}
+      volumes:
+          - name: rocketadmin-data
+            persistentVolumeClaim:
+                claimName: rocketadmin-data-pvc
+{{- endif }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -40,6 +46,11 @@ spec:
             - name: http
               containerPort: 8080
               protocol: TCP
+{{- if .Values.pglite.enabled }}
+          volumeMounts:
+              - name: rocketadmin-data
+                mountPath: /var/lib/rocketadmin
+{{- endif }}
           livenessProbe:
             httpGet:
               path: /
