--- a/charts/rocketadmin/values.yaml
+++ b/charts/rocketadmin/values.yaml
@@ -102,3 +102,7 @@ postgresql:
     username: rocketadmin
     existingSecret: rocketadmin-postgresql-secret
     database: rocketadmin
+
+pglite:
+  enabled: false
+  storageClass: default
