--- a/charts/rocketadmin/templates/deployment.yaml
+++ b/charts/rocketadmin/templates/deployment.yaml
@@ -50,7 +50,7 @@ spec:
           volumeMounts:
               - name: rocketadmin-data
                 mountPath: /var/lib/rocketadmin
-{{- endif }}
+{{- end }}
           livenessProbe:
             httpGet:
               path: /
