--- a/charts/rocketadmin/templates/deployment.yaml
+++ b/charts/rocketadmin/templates/deployment.yaml
@@ -59,6 +59,7 @@ spec:
             httpGet:
               path: /
               port: http
+              initialDelaySeconds: 30
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
