--- a/charts/rocketadmin/templates/secret.yaml
+++ b/charts/rocketadmin/templates/secret.yaml
@@ -34,7 +34,7 @@ stringData:
   DATABASE_URL: postgresql://rocketadmin:{{urlquery .Values.auth.password}}@{{ include "rocketadmin.postgresql.fullname" . }}/rocketadmin
 {{- end -}}
 {{- if .Values.pglite.enabled }}
-  PGLITE_FOLDER_PATH: /pglite-storage
+  PGLITE_FOLDER_PATH: /pglite-storage/data
 {{- end}}
 {{- if .Values.email.enabled }}
   EMAIL_CONFIG_STRING: "smtp://{{urlquery .Values.email.username}}:{{urlquery .Values.email.password}}@{{.Values.email.host}}:{{.Values.email.port}}"
