--- a/charts/rocketadmin/Chart.yaml
+++ b/charts/rocketadmin/Chart.yaml
@@ -3,11 +3,11 @@ name: rocketadmin
 description: Rocketadmin is a web-based application for creating admin panels for your projects.
 type: application
 icon: https://avatars.githubusercontent.com/u/84132223
-version: 1.0.10
+version: 1.0.11
 home: https://rocketadmin.com
 sources:
   - https://github.com/rocket-admin/rocketadmin
-appVersion: "1.2.1"
+appVersion: "null"
 dependencies:
 - name: postgresql
   repository: oci://registry-1.docker.io/bitnamicharts
